# okta-access-security-posture-management

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
src/: config.py  db.py
src/api/: audit.py  dependencies.py  errors.py  main.py  middleware.py
src/core/: assessment_engine.py  constants.py  crypto.py  llm.py  log_analyzer.py  notifier.py  okta_client.py  policy_simulator.py  risk_scenarios.py  risk_scorer.py  scenario_sync.py  security_events.py  vulnerability_engine.py
src/models/: __init__.py  assessment_result.py  audit_log.py  base.py  job.py  notification_channel.py  posture_finding.py  report.py  scan.py  scenario.py  vulnerability.py  vulnerability_impact.py
src/schemas/: assessments.py  common.py  dashboard.py  notifications.py  posture.py  reports.py  scenarios.py  schedules.py  settings.py  vulnerabilities.py
src/tasks/: data_retention.py  health_monitor.py  report_generation.py  scheduler.py  tenant_scan.py  worker.py
tests/: conftest.py  test_assessment_engine.py  test_crypto.py  test_log_analyzer.py  test_notifier.py  test_okta_client.py  test_policy_simulator.py  test_posture_checks.py  test_reports.py  test_risk_scenarios.py  test_risk_scorer.py  test_security_events.py  test_vulnerability_engine.py
(+30 files in other folders)
