[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aspm"
version = "0.1.0"
description = "Okta Access Security Posture Management Platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "saq[web]>=0.12.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "cryptography>=42.0.0",
    "python-multipart>=0.0.9",
    "fpdf2>=2.8.0",
    "structlog>=24.1.0",
    "authlib>=1.3.0",
    "itsdangerous>=2.2.0",
    "croniter>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.4.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120
